--- a/views/index.pug
+++ b/views/index.pug
@@ -33,7 +33,7 @@ head
     text-indent: 12px;
     }
 p
-  img(src='images\unnamed.jpg' width='140' height='130' align='right' href='index.html')
+  img(src='images\unnamed.jpg' width='140' height='130' align='right' href='index.pug')
 h1 Welcome to SaskGroup
 p
   span
