--- a/views/index.pug
+++ b/views/index.pug
@@ -48,7 +48,7 @@ p
   img(src='images\download.jpeg' width='190' height='180' align='left')
   br
   .right
-    | herokuhj We are very excited to inform you that SaskGroup is organizing Family Bowling Evening on Saturday 28th
+    | herokuhjher We are very excited to inform you that SaskGroup is organizing Family Bowling Evening on Saturday 28th
     | December 2019 from 6 pm &nbsp;&nbsp;to 7:30 pm to celebrate Christmas and New
     | Year. Pizza and drinks will be served during the event. This is a fun event for &nbsp;&nbsp;&nbsp;&nbsp;SaskGroup family. We would like to request you to come with all of your family members. Additional event details will be shared later.
   script(src='https://code.jquery.com/jquery-3.4.1.slim.min.js' integrity='sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n' crossorigin='anonymous')
