--- a/views/index.pug
+++ b/views/index.pug
@@ -32,26 +32,26 @@ html(lang='en')
       font-size: 20px;
       text-indent: 12px;
       }
-  body
-    p
-      img(src='images\unnamed.jpg', width='140', height='130', align='right', href='index.html')
-    h1 Welcome to SaskGroup
-    p
-      span
-        a(href='index1.html') Home
-      span(style='color: green;')
-        a(href='memberships.html') Membership
-        |         Events  
-        a(style='color: #008000;', href='contact.html') Contact Us
-    h3
-      span(style='color: #ff6600;') Family Bowling Event:
-    p
-      img(src='images\download.jpeg', width='190', height='180', align='left')
-      br
-    .right
-      | We are very excited to inform you that SaskGroup is organizing Family Bowling Evening on Saturday 28th
-      | December 2019 from 6 pm   to 7:30 pm to celebrate Christmas and New
-      | Year. Pizza and drinks will be served during the event. This is a fun event for     SaskGroup family. We would like to request you to come with all of your family members. Additional event details will be shared later.
-    script(src='https://code.jquery.com/jquery-3.4.1.slim.min.js', integrity='sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n', crossorigin='anonymous')
-    script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js', integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo', crossorigin='anonymous')
-    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js', integrity='sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6', crossorigin='anonymous')
+  //- body
+  //-   p
+  //-     img(src='images\unnamed.jpg', width='140', height='130', align='right', href='index.html')
+  //-   h1 Welcome to SaskGroup
+  //-   p
+  //-     span
+  //-       a(href='index1.html') Home
+  //-     span(style='color: green;')
+  //-       a(href='memberships.html') Membership
+  //-       |         Events  
+  //-       a(style='color: #008000;', href='contact.html') Contact Us
+  //-   h3
+  //-     span(style='color: #ff6600;') Family Bowling Event:
+  //-   p
+  //-     img(src='images\download.jpeg', width='190', height='180', align='left')
+  //-     br
+  //-   .right
+  //-     | pug We are very excited to inform you that SaskGroup is organizing Family Bowling Evening on Saturday 28th
+  //-     | December 2019 from 6 pm   to 7:30 pm to celebrate Christmas and New
+  //-     | Year. Pizza and drinks will be served during the event. This is a fun event for     SaskGroup family. We would like to request you to come with all of your family members. Additional event details will be shared later.
+  //-   script(src='https://code.jquery.com/jquery-3.4.1.slim.min.js', integrity='sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n', crossorigin='anonymous')
+  //-   script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js', integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo', crossorigin='anonymous')
+  //-   script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js', integrity='sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6', crossorigin='anonymous')
