--- a/views/index.pug
+++ b/views/index.pug
@@ -22,7 +22,7 @@ html(lang='en')
     h3
       span(style='color: #ff6600;') Family Bowling Event:
     p
-      img(src='images\download.jpeg', width='190', height='180', align='left')
+      img(src='./images\download.jpeg', width='190', height='180', align='left')
       br
     .right
       | pug We are very excited to inform you that SaskGroup is organizing Family Bowling Evening on Saturday 28th
