--- a/views/index.pug
+++ b/views/index.pug
@@ -22,12 +22,12 @@ html(lang='en')
     h3
       span(style='color: #ff6600;') Family Bowling Event:
     p
-      img(src='./images\download.jpeg', width='190', height='180', align='left')
+      img(src='./images/download.jpeg', width='190', height='180', align='left')
       br
     .right
-      | pug We are very excited to inform you that SaskGroup is organizing Family Bowling Evening on Saturday 28th
+      | We are very excited to inform you that SaskGroup is organizing Family Bowling Evening on Saturday 28th
       | December 2019 from 6 pm   to 7:30 pm to celebrate Christmas and New
-      | Year. Pizza and drinks will be served during the event. This is a fun event for     SaskGroup family. We would like to request you to come with all of your family members. Additional event details will be shared later.
+      | Year. Pizza and drinks will be served during the event. This is a fun event for SaskGroup family. We would like to request you to come with all of your family members. Additional event details will be shared later.
     script(src='https://code.jquery.com/jquery-3.4.1.slim.min.js', integrity='sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n', crossorigin='anonymous')
     script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js', integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo', crossorigin='anonymous')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js', integrity='sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6', crossorigin='anonymous')
