--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,7 @@ h1 {
     color:blue;
     font-size: 38px;
     text-align: center;
+    padding: 16px;
     }
     span {
     color: green;
@@ -9,6 +10,8 @@ h1 {
     }
     a {
     color:green;
+    background: black;
+    padding: 13px;
     }
     p {
     color:black;
@@ -20,4 +23,7 @@ h1 {
     font: 1em sans-serif;
     font-size: 20px;
     text-indent: 12px;
+    }
+    a:hover, a:active {
+        background-color:grey;
     }
