--- a/views/dupilcate.pug
+++ b/views/dupilcate.pug
@@ -9,23 +9,25 @@ html(lang='en')
     link(rel='stylesheet', type='text/css', href='styles.css')
   body
     p
-      img(src='./images/unnamed.jpg', width='240', height='230', align='right', href='index.html')
+      img(src='./images/unnamed.jpg', width='140', height='130', align='right', href='index.html')
     h1 Welcome to SaskGroup
     p
       span
         a(href='index1.html') Home
+        
+      span(style='color: green;')
         a(href='memberships.html') Membership
-        a(href='event1.html') Event
-        a(href='contact.html') Contact Us
+        |         Events  
+        a(style='color: #008000;', href='contact.html') Contact Us
     h3
-      span(style='color: #ff6600;') Christmas Party:
+      span(style='color: #ff6600;') Family Bowling Event:
     p
-      img(src='images/christmas.jpg', width='270', height='260', align='left')
+      img(src='images\download.jpeg', width='190', height='180', align='left')
       br
     .right
-      | We are very excited to inform you that SaskGroup is organizing Christmas Party on Tuesday 24th
-      | December 2019 from 6 pm to 10:30 pm to celebrate Christmas and New
-      | Year. It would be potluck event. This is a fun event for SaskGroup family. We would like to request you to come with all of your family members. Additional event details will be shared later.
+      | pug We are very excited to inform you that SaskGroup is organizing Family Bowling Evening on Saturday 28th
+      | December 2019 from 6 pm   to 7:30 pm to celebrate Christmas and New
+      | Year. Pizza and drinks will be served during the event. This is a fun event for     SaskGroup family. We would like to request you to come with all of your family members. Additional event details will be shared later.
     script(src='https://code.jquery.com/jquery-3.4.1.slim.min.js', integrity='sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n', crossorigin='anonymous')
     script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js', integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo', crossorigin='anonymous')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js', integrity='sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6', crossorigin='anonymous')
