--- a/views/index.pug
+++ b/views/index.pug
@@ -9,23 +9,36 @@ html(lang='en')
     link(rel='stylesheet', type='text/css', href='styles.css')
   body
     p
-      img(src='./images/unnamed.jpg', width='240', height='230', align='right', href='index.html')
+      img(src='./images/unnamed.jpg', width='170', height='150', align='right', href='indexold.html')
     h1 Welcome to SaskGroup
     p
       span
-        a(href='index1.html') Home
+        a(href='index') Home
         a(href='memberships.html') Membership
-        a(href='event1.html') Event
-        a(href='contact.html') Contact Us
-    h3
-      span(style='color: #ff6600;') Christmas Party:
+        a(href='event') Event
+        a(href='contact') Contact Us
+        a(href='index1.html') About Us
+    h2 
+      span(style='color: #ff6600;') Christmas Party
     p
-      img(src='images/christmas.jpg', width='270', height='260', align='left')
+      img(src='images/christmas.jpg', width='470', height='360', align='left')
       br
     .right
       | We are very excited to inform you that SaskGroup is organizing Christmas Party on Tuesday 24th
       | December 2019 from 6 pm to 10:30 pm to celebrate Christmas and New
       | Year. It would be potluck event. This is a fun event for SaskGroup family. We would like to request you to come with all of your family members. Additional event details will be shared later.
+      br
+    h3
+      | Art:
+      br
+      br
+      br
+      br
+    p
+      img(src='images/ashmee.jpg', alt="Paris" style="width:50%;")
+    .left  
+      |Art by: Ashmee Adhikari
     script(src='https://code.jquery.com/jquery-3.4.1.slim.min.js', integrity='sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n', crossorigin='anonymous')
     script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js', integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo', crossorigin='anonymous')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js', integrity='sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6', crossorigin='anonymous')
+    
