project updates DEC12

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -70,7 +70,7 @@ head
     }
 h1 Contact us
 span(style='color: #008000;')
-  a(href='indexold.html') Home
+  a(href='index') Home
 p  Email SaskGroup
 fieldset(style='width:800px')
   form(name='RegForm' action='contact' onsubmit='return myForms()' method='post')
