--- a/views/event.pug
+++ b/views/event.pug
@@ -16,5 +16,7 @@ head
 body
   h1 Events
   p
-    a(href='pastevent.html') Past Events
-        a(href='upcoming.html') Upcoming Events
+    a( href='index') Home
+  
+    a(href='pastevent') Past Events
+        a(href='upcoming') Upcoming Events
