--- a/views/index.pug
+++ b/views/index.pug
@@ -14,10 +14,10 @@ html(lang='en')
     p
       span
         a(href='index') Home
-        a(href='memberships.html') Membership
+        a(href='member') Membership
         a(href='event') Event
         a(href='contact') Contact Us
-        a(href='index1.html') About Us
+        a(href='About') About Us
     h2 
       span(style='color: #ff6600;') Christmas Party
     p
