project updates saved to database

--- a/views/application.pug
+++ b/views/application.pug
@@ -17,7 +17,7 @@ h2 Application form for new membership
 p
   span(style='font-size: 18px')
     | To apply for SaskGroup membership please fill in the questions below. SaskGroup will add your email address and Phone number to our list for communication purpose.
-form(name='RegForm' action='save_user.html' onsubmit='return myForms()' method='post')
+form(name='RegForm' action='apply' onsubmit='return myForms()' method='post')
   label(for='abc') Are you new comer to Regina/Saskatchewan?
   br
   .form-check.form-check-inline
