--- a/views/index.pug
+++ b/views/index.pug
@@ -35,7 +35,7 @@ html(lang='en')
       br
       br
     p
-      img(src='images/ashmee.jpg', alt="Paris" style="width:50%;")
+      img(src='images/ashmee.jpg', style="width:50%;")
     .left  
       |Art by: Ashmee Adhikari
     script(src='https://code.jquery.com/jquery-3.4.1.slim.min.js', integrity='sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n', crossorigin='anonymous')
