--- a/views/About.pug
+++ b/views/About.pug
@@ -7,9 +7,10 @@ head
   link(rel='stylesheet' type='text/css' href='styles.css')
   style(type='text/css').
     /* We select all the document span elements and apply the color property with a white value */
-    h2 {
+    h1 {
     color:blue;
     font-size: 30px;
+    text-align: center;
     }
     p {
     font-size: 25px;
@@ -17,7 +18,12 @@ head
     span {
     font-size: 25px;
     }
-h2 About Us
+    a {
+        background: powderblue;
+    }
+h2
+   a(href='index') Home
+h1 About Us
 p
   span
     | SaskGroup is a group of Nepalese people work in SaskPower, Saskatchewan&nbsp;that conducts and supports community activities among Nepalese living in Southern Saskatchewan. The mission of SaskGroup is to foster social, cultural and educational activities among its members and their dependents, promote Nepali culture and heritage in Saskatchewan and Canada. The major activities of SaskGroup are limited to the following:
